// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserMenu render default 1`] = `
<div
  className="user-menu"
>
  <div
    className="select user-menu__select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="select__value-container css-1hwfws3"
      >
        <div
          className="user-menu__image-container"
        >
          <div
            className="user-menu__image-default"
          />
          <div
            className="user-menu__image"
            style={
              Object {
                "backgroundImage": "url(https://lh3.googleusercontent.com/-cQLcFi7r2uc/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rfoCSVbR8qVruV55uAYdSC-znVn2w.CMID/s96-c/photo.jpg)",
              }
            }
          />
        </div>
        <input
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="select__indicators css-1wy0on6"
      >
        <span
          className="select__indicator-separator css-1okebmr-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="select__dropdown-arrow"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserMenu render opened 1`] = `
<div
  className="user-menu"
>
  <div
    className="select user-menu__select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="select__value-container css-1hwfws3"
      >
        <div
          className="user-menu__image-container"
        >
          <div
            className="user-menu__image-default"
          />
          <div
            className="user-menu__image"
            style={
              Object {
                "backgroundImage": "url(https://lh3.googleusercontent.com/-cQLcFi7r2uc/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rfoCSVbR8qVruV55uAYdSC-znVn2w.CMID/s96-c/photo.jpg)",
              }
            }
          />
        </div>
        <input
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="select__indicators css-1wy0on6"
      >
        <span
          className="select__indicator-separator css-1okebmr-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="select__indicator select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="select__dropdown-arrow"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
